[package]
name = "beancount-gocardless-importer"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
beanru = { git = "https://github.com/doriath/beanru" }
clap = "4"
gocardless = { git = "https://github.com/doriath/gocardless" }
rust_decimal = "1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = "^2.0"
serde_yaml = "0.9"
tokio = { version = "1.34.0", features = ["full"] } 
